contracts/auction_contract/contracts/auction/test_output.txt
   Compiling auction v0.0.0 (C:\Users\shrik\Auction-Dapp-Yellow-Belt\contracts\auction_contract\contracts\auction)
warning: unused import: `Symbol`
 --> contracts\auction\src\lib.rs:2:85
  |
2 | use soroban_sdk::{contract, contractimpl, contracttype, symbol_short, Address, Env, Symbol};
  |                                                                                     ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
  --> contracts\auction\src\lib.rs:82:26
   |
82 |             env.events().publish(
   |                          ^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
  --> contracts\auction\src\lib.rs:94:22
   |
94 |         env.events().publish(
   |                      ^^^^^^^

warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
   --> contracts\auction\src\lib.rs:125:22
    |
125 |         env.events().publish(
    |                      ^^^^^^^

error[E0599]: no method named `set_timestamp` found for struct `soroban_sdk::ledger::Ledger` in the current scope
   --> contracts\auction\src\test.rs:70:18
    |
 70 |     env.ledger().set_timestamp(original_end - 120); // 2 mins before end (within 5 min window)
    |                  ^^^^^^^^^^^^^
    |
   ::: C:\Users\shrik\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\soroban-sdk-25.1.1\src\testutils.rs:303:8
    |
303 |     fn set_timestamp(&self, timestamp: u64);
    |        ------------- the method is available for `soroban_sdk::ledger::Ledger` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `timestamp` with a similar name, but with different arguments
   --> C:\Users\shrik\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\soroban-sdk-25.1.1\src\ledger.rs:87:5
    |
 87 |     pub fn timestamp(&self) -> u64 {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: trait `Ledger` which provides `set_timestamp` is implemented but not in scope; perhaps you want to import it
    |
  3 + use soroban_sdk::testutils::Ledger;
    |

For more information about this error, try `rustc --explain E0599`.
warning: `auction` (lib test) generated 4 warnings
error: could not compile `auction` (lib test) due to 1 previous error; 4 warnings emitted
